--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -8,6 +8,8 @@ pydantic==2.10.1
 pydantic_core==2.27.1
 requests==2.32.3
 sniffio==1.3.1
+fuzzywuzzy==0.18.0
+python-Levenshtein==0.26.1
 starlette==0.41.3
 typing_extensions==4.12.2
 urllib3==2.2.3
