--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,10 +8,13 @@
     "@testing-library/user-event": "^13.5.0",
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
+    "axios": "^1.7.7",
+    "randomcolor": "^0.6.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.28.0",
     "react-scripts": "5.0.1",
+    "recharts": "^2.13.3",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
